--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         <div class="flex flex-row items-center gap-2 lg:left-[45%] absolute">
           <div>
-            <img src="/images/logo.png" alt="">
+            <img src="./images/logo.png" alt="">
           </div>
           <div>
             <h2 class="text-text-color md:text-2xl lg:text-3xl">Fruit Burst</h2>
@@ -96,7 +96,7 @@
             <p class="text-xs text-text-color">We supply highly quality organic products</p>
             <button class="text-text-color text-sm bg-nav-bg py-2 px-5 rounded-lg">Shop Now</button>
           </div>
-          <img src="/images/banner1.png" class="w-full z-1 " />
+          <img src="./images/banner1.png" class="w-full z-1 " />
           <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
             <a href="#slide4" class="btn btn-circle">❮</a>
             <a href="#slide2" class="btn btn-circle">❯</a>
@@ -110,7 +110,7 @@
             <p class="text-xs text-text-color">We supply highly quality organic products</p>
             <button class="text-text-color text-sm bg-nav-bg py-2 px-5 rounded-lg">Shop Now</button>
           </div>
-          <img src="/images/banner2.png" class="w-full" />
+          <img src="./images/banner2.png" class="w-full" />
           <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
             <a href="#slide1" class="btn btn-circle">❮</a>
             <a href="#slide3" class="btn btn-circle">❯</a>
@@ -124,7 +124,7 @@
             <p class="text-xs text-text-color">We supply highly quality organic products</p>
             <button class="text-text-color text-sm bg-nav-bg py-2 px-5 rounded-lg">Shop Now</button>
           </div>
-          <img src="/images/banner3.png" class="w-full" />
+          <img src="./images/banner3.png" class="w-full" />
           <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
             <a href="#slide2" class="btn btn-circle">❮</a>
             <a href="#slide4" class="btn btn-circle">❯</a>
@@ -138,7 +138,7 @@
             <p class="text-xs text-text-color">We supply highly quality organic products</p>
             <button class="text-text-color text-sm bg-nav-bg py-2 px-5 rounded-lg">Shop Now</button>
           </div>
-          <img src="/images/banner4.png" class="w-full " />
+          <img src="./images/banner4.png" class="w-full " />
           <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
             <a href="#slide3" class="btn btn-circle">❮</a>
             <a href="#slide1" class="btn btn-circle">❯</a>
@@ -148,31 +148,31 @@
       <div
         class="opacity-0 lg:opacity-100 -mt-24 absolute flex flex-row justify-around bg-text-color shadow-lg left-[15%]   w-[70%] rounded-md py-6 px-5">
         <div class="text-center space-y-2">
-          <img class="" src="/images/fruit1.png" alt="">
+          <img class="" src="./images/fruit1.png" alt="">
           <div>
             <p class="">Graps</p>
           </div>
         </div>
         <div class="text-center space-y-2">
-          <img src="/images/fruit2.png" alt="">
+          <img src="./images/fruit2.png" alt="">
           <div>
             <p class="">Orange</p>
           </div>
         </div>
         <div class="text-center space-y-2">
-          <img src="/images/fruit3.png" alt="">
+          <img src="./images/fruit3.png" alt="">
           <div>
             <p class="">Mango</p>
           </div>
         </div>
         <div class="text-center space-y-2">
-          <img src="/images/fruit4.png" alt="">
+          <img src="./images/fruit4.png" alt="">
           <div>
             <p class="">Strawberry</p>
           </div>
         </div>
         <div class="text-center space-y-2">
-          <img src="/images/fruit5.png" alt="">
+          <img src="./images/fruit5.png" alt="">
           <div>
             <p class="">Punica</p>
           </div>
@@ -230,7 +230,7 @@
       <div
         class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 text-center justify-around items-center lg:px-10 py-10 md::py-10 lg:py-10 gap-4 ">
         <div class="space-y-5 border-2 border-slate-100 py-10">
-          <img class="w-[20%] mx-auto" src="/images/fruit6.png" alt="">
+          <img class="w-[20%] mx-auto" src="./images/fruit6.png" alt="">
           <p>12.90$ - 18.85$</p>
           <p>Apples</p>
           <hr class="w-28 mx-auto">
@@ -246,7 +246,7 @@
           <dialog id="my_modal_1" class="modal modal-bottom sm:modal-middle">
             <form method="dialog" class="modal-box">
               <div class="space-y-5">
-                <img class="w-[20%] mx-auto" src="/images/fruit6.png" alt="">
+                <img class="w-[20%] mx-auto" src="./images/fruit6.png" alt="">
                 <p>12.90$ - 18.85$</p>
                 <p>Apples</p>
                 <hr class="w-28 mx-auto">
@@ -269,7 +269,7 @@
           </dialog>
         </div>
         <div class="space-y-5 border-2 border-slate-100 py-10">
-          <img class="w-[20%] mx-auto" src="/images/fruit7.png" alt="">
+          <img class="w-[20%] mx-auto" src="./images/fruit7.png" alt="">
           <p>12.90$ - 18.85$</p>
           <p>Orange</p>
           <hr class="w-28 mx-auto">
@@ -285,7 +285,7 @@
           <dialog id="my_modal_2" class="modal modal-bottom sm:modal-middle">
             <form method="dialog" class="modal-box">
               <div class="space-y-5">
-                <img class="w-[20%] mx-auto" src="/images/fruit7.png" alt="">
+                <img class="w-[20%] mx-auto" src="./images/fruit7.png" alt="">
                 <p>12.90$ - 18.85$</p>
                 <p>Orange</p>
                 <hr class="w-28 mx-auto">
@@ -307,7 +307,7 @@
           </dialog>
         </div>
         <div class="space-y-5 border-2 border-slate-100 py-10">
-          <img class="w-[20%] mx-auto" src="/images/fruit8.png" alt="">
+          <img class="w-[20%] mx-auto" src="./images/fruit8.png" alt="">
           <p>12.90$ - 18.85$</p>
           <p>Red Dragon</p>
           <hr class="w-28 mx-auto">
@@ -323,7 +323,7 @@
           <dialog id="my_modal_3" class="modal modal-bottom sm:modal-middle">
             <form method="dialog" class="modal-box">
               <div class="space-y-5">
-                <img class="w-[20%] mx-auto" src="/images/fruit8.png" alt="">
+                <img class="w-[20%] mx-auto" src="./images/fruit8.png" alt="">
                 <p>12.90$ - 18.85$</p>
                 <p>Red Dragon</p>
                 <hr class="w-28 mx-auto">
@@ -345,7 +345,7 @@
           </dialog>
         </div>
         <div class="space-y-5 border-2 border-slate-100 py-10">
-          <img class="w-[20%] mx-auto" src="/images/fruit9.png" alt="">
+          <img class="w-[20%] mx-auto" src="./images/fruit9.png" alt="">
           <p>12.90$ - 18.85$</p>
           <p>Banana</p>
           <hr class="w-28 mx-auto">
@@ -361,7 +361,7 @@
           <dialog id="my_modal_4" class="modal modal-bottom sm:modal-middle">
             <form method="dialog" class="modal-box">
               <div class="space-y-5">
-                <img class="w-[20%] mx-auto" src="/images/fruit9.png" alt="">
+                <img class="w-[20%] mx-auto" src="./images/fruit9.png" alt="">
                 <p>12.90$ - 18.85$</p>
                 <p>Banana</p>
                 <hr class="w-28 mx-auto">
@@ -390,7 +390,7 @@
     <section class="container mx-auto py-3 md:py-5 px-5 md:px-5 lg:px-20">
       <div class="relative text-center lg:py-5 h-[1000px] ">
         <div class="lg:w-[100%] h-[100%] md:h-[55%] lg:h-[60%] absolute bg-gradient-to-t from-stone-950"></div>
-        <img class="h-[100%] md:h-[55%]  lg:h-[60%]" src="/images/team.png" alt="">
+        <img class="h-[100%] md:h-[55%]  lg:h-[60%]" src="./images/team.png" alt="">
         <div
           class="lg:py-5 absolute left-[5%] md:left-[18%] lg:left-[16%] bottom-[1%]  md:bottom-[50%] lg:bottom-[53%]">
           <div class="py-10 space-y-4">
@@ -404,7 +404,7 @@
           <div class=" grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-2 lg:gap-20 mx-auto">
             <!-- expert-1 -->
             <div class="space-y-2">
-              <img class="w-[30%] mx-auto" src="/images/member1.png" alt="">
+              <img class="w-[30%] mx-auto" src="./images/member1.png" alt="">
               <div>
                 <p class="text-xl font-bold text-text-color">Awlad Hossain</p>
               </div>
@@ -419,7 +419,7 @@
             </div>
             <!-- expert-2 -->
             <div class="space-y-2">
-              <img class="w-[30%] mx-auto" src="/images/member2.png" alt="">
+              <img class="w-[30%] mx-auto" src="./images/member2.png" alt="">
               <div>
                 <p class="text-xl font-bold text-text-color">Safia Chowdhury</p>
               </div>
@@ -434,7 +434,7 @@
             </div>
             <!-- expert-3 -->
             <div class="space-y-2">
-              <img class="w-[30%] mx-auto" src="/images/member3.png" alt="">
+              <img class="w-[30%] mx-auto" src="./images/member3.png" alt="">
               <div>
                 <p class="text-xl font-bold text-text-color">Rokib Hossain</p>
               </div>
@@ -449,7 +449,7 @@
             </div>
             <!-- expert-4 -->
             <div class="space-y-2">
-              <img class="w-[30%] mx-auto" src="/images/member4.png" alt="">
+              <img class="w-[30%] mx-auto" src="./images/member4.png" alt="">
               <div>
                 <p class="text-xl font-bold text-text-color">Chaity</p>
               </div>
@@ -524,7 +524,7 @@
           </div>
         </div>
         <div>
-          <img class="w-[100%] mx-auto" src="/images/whychoose1.png" alt="">
+          <img class="w-[100%] mx-auto" src="./images/whychoose1.png" alt="">
         </div>
         <!-- Integrated Supplier part-->
         <div class="space-y-8">
@@ -583,7 +583,7 @@
     <section class="bg-footer-color space-y-10 py-20">
       <div class="flex flex-row justify-center gap-4 items-center">
         <div>
-          <img src="/images/logo.png" alt="">
+          <img src="./images/logo.png" alt="">
         </div>
         <div>
           <h2 class="text-text-color text-2xl">Fruit Burst</h2>
