--- a/index.html
+++ b/index.html
@@ -39,17 +39,18 @@
 </head>
 
 <body class="font">
+
   <header class="container mx-auto py-5 lg:py-5 md:py-5 px-5 md:px-5 lg:px-10">
     <!-- navbar -->
     <nav class="container mx-auto lg:py-5 lg:px-10">
-      <div class=" relative flex flex-row justify-between items-center lg:bg-nav-bg lg:rounded-full px-8 py-2">
-        <div class="text-text-color opacity-0 lg:opacity-100   ">
+      <div class=" relative flex flex-row justify-between items-center lg:bg-nav-bg lg:rounded-full lg:px-8 py-2">
+        <div class="text-text-color opacity-0 lg:opacity-100  ">
           <a class="mr-5" href="">Home</a>
           <a class="mr-5" href="">About Us</a>
           <a class="mr-5" href="">Shop</a>
           <a class="mr-5" href="">All Fruits</a>
         </div>
-        <div class="flex flex-row -ml-8 justify-between items-center lg:left-[45%] absolute">
+        <div class="flex flex-row justify-between items-center lg:left-[45%] absolute">
           <div>
             <img src="./images/logo.png" alt="">
           </div>
@@ -235,7 +236,7 @@
       <div
         class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 text-center justify-around items-center lg:px-10 py-10 md::py-10 lg:py-10 gap-4 ">
         <div class="space-y-5 border-2 border-slate-100 py-10">
-          <img class="w-[20%] mx-auto" src="./images/fruit6.png" alt="">
+          <img class="w-[16%] mx-auto" src="./images/fruit6.png" alt="">
           <p>12.90$ - 18.85$</p>
           <p>Apples</p>
           <hr class="w-28 mx-auto">
@@ -251,7 +252,7 @@
           <dialog id="my_modal_1" class="modal modal-bottom sm:modal-middle">
             <form method="dialog" class="modal-box">
               <div class="space-y-5">
-                <img class="w-[20%] mx-auto" src="./images/fruit6.png" alt="">
+                <img class="w-[16%] mx-auto" src="./images/fruit6.png" alt="">
                 <p>12.90$ - 18.85$</p>
                 <p>Apples</p>
                 <hr class="w-28 mx-auto">
@@ -399,7 +400,7 @@
           <img class="w-full h-[900px] md:h-[100%] lg:h-[100%]" src="./images/team.png" alt="">
         </div>
         <div
-          class="lg:py-5 absolute left-[5%] md:bottom-[15%] md:left-[10%] lg:left-[14%] bottom-[5%]  lg:bottom-[20%] ">
+          class="lg:py-5 absolute left-[5%] md:bottom-[15%] md:left-[10%] lg:left-[14%] bottom-[4%]  lg:bottom-[20%] ">
           <div class="py-10 space-y-4 lg:mb-8">
             <h3 class="text-lg md:text-xl lg:text-3xl font-extrabold text-center text-text-color">Meet the team section
             </h3>
@@ -477,7 +478,7 @@
       </div>
     </section>
     <!-- why choose section -->
-    <section class="container mx-auto px-5 md:px-5 lg:px-20">
+    <section class="container mx-auto px-5 md:px-5 lg:px-20 py-5">
       <div class="text-center space-y-4">
         <h2 class="text-xl md:text-3xl lg:text-5xl font-extrabold">Why Choose Us</h2>
         <p class="text-xs">Contrary to popular belief, is not simply random text. It has roots in a piece of classical
@@ -485,8 +486,8 @@
           from 45 BC, making it over 2000 years old.
         </p>
       </div>
-      <div class=" grid grid-cols-1 md:grid-cols-1 lg:grid-cols-3 py-10 gap-5 md:gap-5 lg:gap-9">
-        <div class="space-y-8">
+      <div class=" flex flex-col md:flex-col lg:flex-row py-10 gap-5 md:gap-5 lg:gap-9">
+        <div class="space-y-8 order-2 md:order-2 lg:order-1">
           <div class="flex flex-col md:flex-col lg:flex-row space-x-4 justify-start gap-3 items-center">
             <div>
               <i
@@ -533,11 +534,11 @@
             </div>
           </div>
         </div>
-        <div>
-          <img class="w-[100%] mx-auto" src="./images/whychoose1.png" alt="">
+        <div class="order-1 md:order-1 lg:order-2">
+          <img class="w-[100%] mx-auto " src="./images/whychoose1.png" alt="">
         </div>
         <!-- Integrated Supplier part-->
-        <div class="space-y-8">
+        <div class="space-y-8 order-3 md:order-3 lg:order-3">
           <div class="flex flex-col-reverse gap-3 md:flex-col-reverse lg:flex-row space-x-4 justify-start items-center">
             <div class="space-y-2">
               <h2 class="text-xl md:text-xl lg:text-2xl font-extrabold text-center lg:text-end">Integrated
@@ -619,6 +620,7 @@
       </div>
     </section>
   </footer>
+
 </body>
 
 </html>
