--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         <div class="flex flex-row justify-between items-center lg:left-[45%] absolute">
           <div>
-            <img src="./images/logo.png" alt="">
+            <img class="w-[80%]" src="./images/logo.png" alt="">
           </div>
           <div>
             <h2 class="text-text-color md:text-2xl lg:text-3xl">Fruit Burst</h2>
@@ -67,7 +67,7 @@
           </div>
           <div class="dropdown">
             <label tabindex="0" class="btn btn-ghost lg:hidden">
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
                 stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
               </svg>
@@ -200,31 +200,31 @@
           </p>
         </div>
         <div class="flex  flex-row gap-4 my-4 ">
-          <div class="flex flex-row gap-3">
+          <div class="flex flex-row justify-center items-center gap-3">
             <div>
               <h2 class="text-xl md:text-3xl lg:text-4xl font-extrabold">29</h2>
               <p class="text-xs">Days</p>
             </div>
             <div>
-              :
+              <i class="fa-solid fa-ellipsis-vertical"></i>
             </div>
           </div>
-          <div class="flex flex-row gap-3">
+          <div class="flex flex-row justify-center items-center gap-3">
             <div>
               <h2 class="text-xl md:text-3xl lg:text-4xl font-extrabold">15</h2>
               <p class="text-xs">Hours</p>
             </div>
             <div>
-              :
+              <i class="fa-solid fa-ellipsis-vertical"></i>
             </div>
           </div>
-          <div class="flex flex-row gap-3">
+          <div class="flex flex-row justify-center items-center gap-3">
             <div>
               <h2 class="text-xl md:text-3xl lg:text-4xl font-extrabold">25</h2>
               <p class="text-xs">Hours</p>
             </div>
             <div>
-              :
+              <i class="fa-solid fa-ellipsis-vertical"></i>
             </div>
           </div>
           <div>
