--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
               </svg>
             </label>
-            <ul tabindex="0" class="menu menu-sm dropdown-content space-y-3 z-10 text-white px-[23px] pb-5 bg-black">
-              <a href="">Home</a>
-              <a href="">About Us</a>
-              <a href="">Shop</a>
-              <a href="">All Fruits</a>
+            <ul tabindex="0" class="menu menu-sm dropdown-content space-y-3 z-10 text-white px-[23px] p-[-10px] bg-black">
+              <a class="text-[10px]" href="">Home</a>
+              <a class="text-[10px]" href="">About Us</a>
+              <a class="text-[10px]" href="">Shop</a>
+              <a class="text-[10px]" href="">All Fruits</a>
             </ul>
           </div>
         </div>
@@ -152,33 +152,33 @@
         </div>
       </div>
       <div
-        class="opacity-0 lg:opacity-100 -mt-24 absolute flex flex-row justify-around bg-text-color shadow-lg left-[15%]   w-[70%] rounded-md py-6 px-5">
+        class="opacity-0 md:opacity-100 lg:opacity-100 md:-mt-14 lg:-mt-24 absolute flex flex-row justify-around bg-text-color text-sm md:py-1 shadow-lg md:left-[25%] lg:left-[15%] md:w-[50%] lg:w-[70%] rounded-md lg:py-6 lg:px-5">
         <div class="text-center space-y-2">
-          <img class="" src="./images/fruit1.png" alt="">
+          <img class="md:w-[60%] lg:w-[100%] mx-auto" src="./images/fruit1.png" alt="">
           <div>
             <p class="">Graps</p>
           </div>
         </div>
         <div class="text-center space-y-2">
-          <img src="./images/fruit2.png" alt="">
+          <img class="md:w-[60%] lg:w-[100%] mx-auto" src="./images/fruit2.png" alt="">
           <div>
             <p class="">Orange</p>
           </div>
         </div>
         <div class="text-center space-y-2">
-          <img src="./images/fruit3.png" alt="">
+          <img class="md:w-[60%] lg:w-[100%] mx-auto" src="./images/fruit3.png" alt="">
           <div>
             <p class="">Mango</p>
           </div>
         </div>
         <div class="text-center space-y-2">
-          <img src="./images/fruit4.png" alt="">
+          <img class="md:w-[60%] lg:w-[100%] mx-auto" src="./images/fruit4.png" alt="">
           <div>
             <p class="">Strawberry</p>
           </div>
         </div>
         <div class="text-center space-y-2">
-          <img src="./images/fruit5.png" alt="">
+          <img class="md:w-[60%] lg:w-[100%] mx-auto" src="./images/fruit5.png" alt="">
           <div>
             <p class="">Punica</p>
           </div>
