--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- font awesome script -->
   <script src="https://kit.fontawesome.com/32576525f7.js" crossorigin="anonymous"></script>
   <!-- favicon link -->
-  <link rel="shortcut icon" href=".images/fruit1.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="./images/fruit1.png" type="image/x-icon" />
   <!-- daisyUi and tailwind cdn -->
   <link href="https://cdn.jsdelivr.net/npm/daisyui@3.4.0/dist/full.css" rel="stylesheet" type="text/css" />
   <script src="https://cdn.tailwindcss.com"></script>
@@ -72,7 +72,8 @@
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
               </svg>
             </label>
-            <ul tabindex="0" class="menu menu-sm dropdown-content space-y-3 z-10 text-white px-[23px] p-[-10px] bg-black">
+            <ul tabindex="0"
+              class="menu menu-sm dropdown-content space-y-3 z-10 text-white px-[23px] p-[-10px] bg-black">
               <a class="text-[10px]" href="">Home</a>
               <a class="text-[10px]" href="">About Us</a>
               <a class="text-[10px]" href="">Shop</a>
