--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
       </div>
     </nav>
     <!-- banner section -->
-    <section class="lg:px-11 lg:mb-44">
-      <div class="carousel w-full relative">
+    <section class="lg:px-11 lg:mb-44 ">
+      <div class="carousel w-full relative rounded-[10px]">
         <!-- banner-1 -->
         <div id="slide1" class="carousel-item relative mt-5 w-full">
-          <div class="relative rounded-[10px]">
+          <div class="relative">
             <div class="absolute bg-black opacity-50 w-[100%] h-[100%]"></div>
-            <img src="./images/banner1.png" class="w-full z-1 " />
+            <img src="./images/banner1.png" class="w-full z-1" />
           </div>
           <div class="absolute text-center w-full top-3 space-y-2 md:top-20 lg:top-[30%] lg:space-y-4">
             <h3 class=" text-2xl md:text-4xl lg:text-6xl text-text-color">Exotic tastes at your <br> doorstep</h3>
